--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -9,10 +9,28 @@
   @apply my-6;
 }
 
+.markdown h1,
+.markdown h2,
+.markdown h3,
+.markdown h4 {
+  @apply font-bold;
+}
+
+.markdown h1 {
+  @apply text-4xl mt-8 mb-4 leading-snug;
+}
 .markdown h2 {
-  @apply text-3xl mt-12 mb-4 leading-snug;
+  @apply text-3xl mt-8 mb-4 leading-snug;
 }
 
 .markdown h3 {
   @apply text-2xl mt-8 mb-4 leading-snug;
+}
+
+.markdown h4 {
+  @apply text-xl mt-8 mb-4 leading-snug;
+}
+
+.markdown p code {
+  @apply bg-gray-200 p-1 rounded;
 }
